--- a/case_study/furama/customer.html
+++ b/case_study/furama/customer.html
@@ -184,7 +184,7 @@
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body" style="color: black">
-                                        You want delete ?
+                                        You want delete Võ Tiến Đạt ?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
@@ -230,7 +230,7 @@
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body" style="color: black">
-                                        You want delete ?
+                                        You want delete Nguyễn Duy Trung ?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
@@ -277,7 +277,7 @@
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body" style="color: black">
-                                        You want delete ?
+                                        You want delete Huỳnh Kim Hiếu ?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
@@ -325,7 +325,7 @@
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body" style="color: black">
-                                        You want delete ?
+                                        You want delete Nguyễn Hữu Toàn ?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
@@ -443,7 +443,9 @@
         </div>
     </div>
 </footer>
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i style="" class="fa-solid fa-arrow-up"></i></button>
+<button onclick="topFunction()" id="myBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z"/>
+</svg></button>
 
 <!-- footer_end -->
 
